<resources>
    <string name="app_name">TresEnJuerga</string>
    <string name="main_iniciarSesion">Iniciar Sesión</string>
    <string name="main_registrar">Registrar</string>
    <string name="main_salir">Salir</string>
    <string name="main_titulo">Menú Principal</string>
    <string name="registro_titulo">Titulo</string>
    <string name="registro_aceptar">Registrar</string>
    <string name="inicioSesion_titulo">Inicio Sesion</string>
    <string name="inicioSesion_aceptar">Iniciar Sesion</string>
    <string name="usuarioLoggeado_titulo">Titulo</string>
    <string name="usuarioLoggeado_jugar">Jugar</string>
    <string name="usuarioLoggeado_perfil">Perfil</string>
    <string name="desconectar">Desconectar</string>
    <string name="entrarAPartida">Entrar</string>
    <string name="tuTurno">Tu Turno</string>
    <string name="turnoDelOtro">Turno de oponente</string>
    <string name="versus">Contra:</string>
    <string name="perfil_titulo">Titulo</string>
    <string name="foto">Foto</string>
    <string name="cambiarFoto">Cambiar foto</string>
    <string name="añadirAmigo">Añadir amigo</string>
    <string name="verDetalles">Ver Info</string>
    <string name="retar">Retar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre">Usuario</string>
    <string name="contraseña">Password</string>
    <string name="volver">Volver</string>
    <string name="gestionarSolicitudes">Solicitudes de amistad</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="peticion">peticion</string>
    <string name="notif0">solicitud</string>
    <string name="notif1">friend aceptado</string>
    <string name="notif2">retar</string>
    <string name="notif3">reto aceptado</string>
    <string name="notif4">hacer jugada</string>
    <string name="notif5">empate</string>
    <string name="notif6">loss</string>
    <string name="notifTitulo0">sol</string>
    <string name="notifTitulo1">1</string>
    <string name="notifTitulo2">2</string>
    <string name="notifTitulo3">3</string>
    <string name="notifTitulo4">4</string>
    <string name="notifTitulo5">5</string>
    <string name="notifTitulo6">6</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="tituloSalir">TituloSalir</string>
    <string name="descSalir">Descripcion salir</string>
    <string name="errorFormatoRegistro">chars1-50</string>
    <string name="errorDeAutentificacion">Error</string>
    <string name="errorNombreCogido">Error</string>
    <string name="solicitudAñadida">add</string>
    <string name="errorAmigo1">error1</string>
    <string name="errorAmigo2">error2</string>
    <string name="errorAmigo3">error3</string>
    <string name="errorAmigo4">error4</string>
    <string name="errorAmigo5">error5</string>
    <string name="retarCorrecto">correcto</string>
    <string name="retarError">Error</string>
    <string name="usuarioLoggeado_amigos">Amigos</string>
    <string name="noPoderPonerAhi">No</string>
    <string name="noEsTuTurno">no</string>
    <string name="victoria">Vic</string>
    <string name="derrota">Loss</string>
    <string name="empate">tIE</string>
    <string name="revancha">rematch</string>
    <string name="hanPedidoRevancha">Pedido rematch</string>
    <string name="revanchaRechazada">Reject</string>
    <string name="puedesPedirRevancha">Pedir revancha</string>
    <string name="revanchaPedida">Pedido</string>
    <string name="revanchaAceptado">Connecting</string>
    <string name="revanchaReady">Ready</string>
    <string name="errorConexion">Error</string>
    <string name="errorFotoRotacion">Error rotation</string>
    <string name="errorFotoTamaño">Error size</string>
    <string name="preferenciasTituloIdioma">Elige uno de estos idiomas</string>
    <string name="preferenciasSubtituloIdioma">¿Qué idioma usas?</string>
    <string name="preferenciasDescripcionIdioma">Elige un idioma</string>
    <string name="preferenciasTituloEstilo">Elige uno de estos estilos</string>
    <string name="preferenciasSubtituloEstilo">¿Qué estilo usas?</string>
    <string name="preferenciasDescripcionEstilo">Elige un estilo</string>
    <string name="tituloPartida">Titulo partida</string>
    <string name="descPartidaTuTurno">Desc</string>
    <string name="descPartidaTurnoDelOtro">Desc</string>
    <string name="finDePartida">Fin de la partida. Finalizando...</string>
    <string name="procesandoJugada">Processing play...</string>
    <string name="preferenciasTituloTablero">zzz</string>
    <string name="preferenciasSubtituloTablero">cc</string>
    <string name="preferenciasDescripcionTablero">asaas</string>
    <string name="miFichaEs">eres</string>
    <string name="sugeridos">Gente sugerida:</string>

</resources>